[metadata]
description-file = README.md

[yapf]
based_on_style = google
column_limit=119
allow_multiline_lambdas=true
blank_line_before_nested_class_or_def=true
coalesce_brackets=true
continuation_indent_width=4
dedent_closing_brackets=true
indent_width=4
spaces_before_comment=2
space_between_ending_comma_and_closing_bracket=true
split_arguments_when_comma_terminated=true
split_before_first_argument=true
split_before_logical_operator=true
split_before_named_assigns=true

[aliases]
test = pytest

[tool:pytest]
addopts = -v --cov-report term-missing --cov-branch --cov=vault_ca tests/
